<resources>
    <string name="app_name">Oscars App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Oscar\'s App</string>
    <string name="nav_header_subtitle">oscar@app.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="action_admin">Admin</string>
    <string name="google_maps_key">AIzaSyC2kJo3orR-fjfK2hVuDm14pJibpLvOMV4</string>

    <!-- Menu Items -->
    <string name="menu_home">Home</string>
    <string name="menu_adopt">Adopt an Animal!</string>
    <string name="menu_vet">Veterinary</string>
    <string name="menu_groomer">Groomer</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_shelter">Shelters</string>
    <string name="menu_profile">Profile</string>

    <!--Login Page -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot my password</string>

    <!--Register Page-->
    <string name="dog_string">Create your profile:</string>
    <string name="name">Name</string>
    <string name="forename">Forename</string>
    <string name="confirm_pass"> Confirm Password</string>
    <string name="photo">Add photo</string>
    <string name="new_profile">Create profile</string>

    <!--Donation Page-->
    <string name="donation_title">This week\'s donation is made to:</string>
    <string name="target">Target: $0</string>
    <string name="sum_target">Collected: $0</string>
    <string name="donation_hint">Donation Amount $ </string>

    <!--Admin Page -->
    <string name="admin">Admin</string>
    <string name="donation_target_hint">Target Amount $</string>
    <string name="donation_cause_name_hint">Cause / Organization name</string>
    <string name="reset_collected">Reset the collected amount from donations</string>
    <string name="admin_text">Add the details of the donations page below:</string>
    <!--Pet-->
    <string name="pet">Pet</string>
    <string name="pet_title">Find your pet a new owner here:</string>
    <string name="type_animal">Animal category: </string>
    <string-array name="animal_types">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bunny</item>
        <item>Hamster</item>
        <item>Guinea Pig</item>
        <item>Parrot</item>
        <item>Fishes</item>
        <item>Other</item>
    </string-array>
    <string name="age_animal">Age: </string>
    <string name="gender_animal">Gender: </string>
    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="description_animal">Add a short description about the animal: </string>
    <string name="delete">Delete</string>
    <string name="save_pet">Save Pet</string>
    <string name="add_images">Add pet photos</string>
    <string name="image_hint">No images loaded yet</string>

    <!--Adoption Page-->
    <string name="all_category">All</string>
    <string name="dog_category">Dogs</string>
    <string name="cat_category">Cats</string>
    <string name="bunny_category">Bunny\'s</string>
    <string name="hamster_category">Hamsters</string>
    <string name="guinea_category">Guinea Pigs</string>
    <string name="parrot_category">Parrots</string>
    <string name="fish_category">Fishes</string>
    <string name="others_category">Others</string>

    <!--Pet Details-->
    <string name="pet_details">Pet Details</string>
    <string name="pet_description">Description: </string>
    <string name="adopt_me">Adopt me!</string>
    <string name="test_button">Was this Pet \n already adopted?</string>

    <string name="see_more">Click to see more!</string>

</resources>