<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.adoption.AdoptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:background="@drawable/search_bar"
                android:iconifiedByDefault="false"
                app:defaultQueryHint="Search pets..." />

            <!-- Add category buttons here -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/all_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/all_category"
                        android:textColor="@color/white" />
                    <Button
                        android:id="@+id/dogs_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/dog_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/cats_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/cat_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/bunny_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/bunny_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/hamster_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/hamster_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/guinea_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/guinea_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/parrot_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/parrot_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/fish_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/fish_category"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/other_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:text="@string/others_category"
                        android:textColor="@color/white" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="horizontal"
            android:layoutAnimation="@anim/layout_animation_fall_down"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dog_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="592dp"
        android:clickable="true"
        android:src="@drawable/dog_add_button"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>