<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_page"
    tools:context="ui.register.RegisterFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="172dp"
                android:layout_marginEnd="101dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/dog_string"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/registername"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/name"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/name"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/registerforename"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:autofillHints="@string/forename"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/forename"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/registeremail"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:autofillHints="@string/email"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerpassword"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:autofillHints="@string/password"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/password"
                    android:inputType="textPassword" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/togglePasswordRegister"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@+id/registerpassword"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="1dp"
                    android:clickable="true"
                    android:src="@drawable/ic_showpass"
                    android:transitionName="togglePasswordTransition" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registerconfirmpass"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:autofillHints="@string/confirm_pass"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/togglePasswordRegisterc"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@+id/registerconfirmpass"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="1dp"
                    android:clickable="true"
                    android:src="@drawable/ic_showpass"
                    android:transitionName="togglePasswordTransition" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView_picker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="29dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="2dp"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/pickimage"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/photo"
                        android:textAlignment="center"
                        android:textColor="@color/grey" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registercreateprofile"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="151dp"
                android:background="@drawable/button"
                android:padding="2dp"
                android:text="@string/new_profile"
                android:textColor="@color/grey"
                android:transitionName="togglePasswordTransition"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>