<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="login.LoginFragment">


        <ProgressBar
            android:id="@+id/loadingIndicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/email_login"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="424dp"
            android:layout_marginEnd="61dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="61dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/togglePassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="36dp"
            android:clickable="true"
            android:src="@drawable/ic_showpass"
            android:transitionName="togglePasswordTransition"
            app:layout_constraintEnd_toEndOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="108dp"
            android:layout_height="53dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="@color/grey"
            android:transitionName="loginButtonTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="108dp"
            android:layout_height="53dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:alpha="100"
            android:background="@drawable/button"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/grey"
            android:transitionName="registerButtonTransition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <TextView
            android:id="@+id/forgot_pass_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="234dp"
            android:clickable="true"

            android:fontFamily="@font/lato_bold"
            android:text="@string/forgot_pass"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
